<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="89dp">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="224dp"
            android:layout_marginTop="28dp"
            android:drawableRight="@drawable/ic_back"
            android:text="@string/log_in"
            android:textColor="@color/calypso_color"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="264dp"
            android:layout_marginTop="85dp"
            android:text="@string/Email"
            android:textColor="@color/black"
            android:textSize="19dp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_title" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/background_edittext"
            android:padding="12dp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginStart="300dp"
            android:layout_marginTop="190dp"
            android:textColor="@color/black"
            android:textSize="19dp"
            android:textStyle="normal"
            tools:layout_editor_absoluteX="301dp"
            tools:layout_editor_absoluteY="226dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="220dp"
            android:background="@drawable/background_edittext"
            android:padding="13dp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_username" />

        <TextView
            android:id="@+id/tv_forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginTop="285dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/forget_pass"
            android:textColor="@color/light_red"
            android:textSize="19dp"
            android:textStyle="normal"
            tools:layout_editor_absoluteX="207dp"
            tools:layout_editor_absoluteY="339dp" />

        <Button
            android:id="@+id/btn_login"
            style="@style/Button"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/log_in"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="403dp" />

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="400dp"
            android:text="@string/Login_havent_account"
            android:textColor="@color/black"
            android:textSize="19dp"
            android:textStyle="normal"
            tools:layout_editor_absoluteX="207dp"
            tools:layout_editor_absoluteY="468dp" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>